[package]
name = "graphlib"
version = "0.1.0"
authors = ["Fausto Carvalho <faustocarva@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntest = "0.9.0"
num = "0.4.0"
num-cmp = "0.1.0"
union-find-rs = "0.2.1"

